--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/koa-shopify-auth": "^4.1.5",
+    "dotenv": "^16.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "koa": "^2.13.4",
+    "koa-session": "^6.2.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
